--- a/Visualizer/src/Arbor/index.html
+++ b/Visualizer/src/Arbor/index.html
@@ -8,8 +8,9 @@
 	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-  Test<br>
-  <canvas id="viewport" width="1000" height="800"></canvas>
+  <div align="center">
+      <canvas id="viewport" width="1000" height="800" margin="auto"></canvas>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
   <script src="lib/arbor.js"></script>
